# smartftpd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/smartftpd/: BSDSocketEngine.h  BSDSocketImpl.h  Socket.h  SocketEngine.h  SocketImpl.h
src/: BSDSocketEngine.cpp  BSDSocketImpl.cpp  Socket.cpp  SocketImpl.cpp  main.cpp
tests/: CMakeLists.txt  SocketTests.cpp
