CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (smartftpd)

SET (SRC_DIR src)
SET (SOURCES 
        ${SRC_DIR}/main.cpp)

ENABLE_TESTING ()

SET (CMAKE_CXX_FLAGS_RELEASE "/MT /O2 /Ob2 /Os /Oy /Gy /EHsc /GR- /DNDEBUG /D_WIN32_WINNT=0x0501 /DWINVER=0x0501")
SET (CMAKE_CXX_FLAGS_DEBUG "/MT /O2 /Ob2 /Os /Oy /Gy /EHsc /GR- /D_WIN32_WINNT=0x0501 /DWINVER=0x0501")
SET (CMAKE_CXX_FLAGS "/MT /O2 /Ob2 /Os /Oy /Gy /EHsc /DNDEBUG /D_WIN32_WINNT=0x0501 /DWINVER=0x0501")

IF (WIN32)
    IF (CMAKE_CL_64)
        SET (WINDOWS_VERSION "5.02")
    ELSE ()
        SET (WINDOWS_VERSION "5.01")
    ENDIF ()
ENDIF ()

ADD_SUBDIRECTORY (tests tests)

ADD_EXECUTABLE (smartftpd ${SOURCES})

ADD_TEST (tests tests/tests)
